# dynamic-backend

./: .env.example  .gitignore  README.md  db.sqlite3  pyproject.toml  run-django.sh
backend/: settings.py  urls.py
pages/: admin.py  models.py  urls.py  views.py
pages/helpers/: data_helper.py  posse.py  webmention.py
pages/management/commands/: import_from_json.py
pages/migrations/: 0001_initial.py  0002_alter_resumeentry_end.py  0003_art_bluesky_link_art_mastodon_link_blog_bluesky_link_and_more.py
static/: styles.css  wp_export.json
templates/: about.html  base.html  blog-nav.html  blogroll.html  fourohfour.html  h-card.html  home.html  list-main.html  navbar.html  post-main.html  projects.html  resume.html  rss.xml  webring.html
