[tool.poetry]
name = "dynamic-backend"
version = "0.1.0"
description = "A dynamic indieweb and microformats2 backend for travissouthard.com"
authors = ["travissouthard <tsouthard88@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"
pillow = "^11.0.0"
mastodon-py = "^1.8.1"
python-dotenv = "^1.0.1"
gunicorn = "^23.0.0"
whitenoise = "^6.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
